# nicehist

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
daemon/: Cargo.toml
daemon/src/: main.rs  protocol.rs
daemon/src/context/: mod.rs  project.rs  vcs.rs
daemon/src/db/: migrations.rs  mod.rs  schema.rs
daemon/src/prediction/: mod.rs  ngram.rs  parser.rs  ranking.rs
data/: common_sequences.json
plugin/: nicehist.plugin.zsh
plugin/functions/: _nicehist  nicehist  nicehist-fzf
plugin/lib/: client.zsh  core.zsh  frecent.zsh  hooks.zsh  widget.zsh
