[workspace]
resolver = "2"
members = ["daemon", "cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Trevor Joynson"]
license = "MIT"
repository = "https://github.com/trevorj/nicehist"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5"
thiserror = "2"
anyhow = "1"

# Dev dependencies
tempfile = "3"
