[package]
name = "nicehist"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "nicehist"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
directories = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
shellexpand = "3"
libc = "0.2"

[dev-dependencies]
tempfile = { workspace = true }
