[package]
name = "nicehist-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "nicehist-daemon"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
directories = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
hostname = "0.4"
libc = "0.2"

[dev-dependencies]
tempfile = { workspace = true }
